Added about and settings to actionbar menu, fragments have been created accordingly. Legacy step counter and main step counter/diet tracker/medical ID fragments are all fullscreen now. More activity overlapping issues fixed and unused code deleted. Java classes have been renamed appropriately as well as the layout xml files.
EDIT: Actionbar was removed for Toolbar to allow greater accessibility

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.managinghealthapplicationv1">
 
-    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
 
     <application
         android:allowBackup="true"
@@ -12,8 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="LockedOrientationActivity">
-        <activity android:name=".BottomNav"></activity>
         <activity android:name=".WalkingActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".AboutActivity" />
         <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
