Medical ID retrieve fragment updated, medical ID is successfully displayed. Calorie counter is now being coded.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="LockedOrientationActivity">
-        <activity android:name=".MedicalActivity"
+        <activity android:name=".AddMedicalIDActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".WalkingActivity"
             android:screenOrientation="portrait"/>
