--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,12 @@
             android:screenOrientation="portrait"/>
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat"/>
+        <activity android:name=".CalorieCounter"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".DisplayLogActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".AddNewEntryActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
